# fixtura-core

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COLLABORATION.md  FIXTURA_EXPLAINED_FOR_A_FRIEND (1).md  MANIFEST.in  PHASE_1_NOTES.md  PHASE_2_NOTES.md  PHASE_3_NOTES.md  PHASE_4_NOTES.md  PHASE_5_NOTES.md  PHASE_6_NOTES.md  PHASE_A_NOTES.md  PHASE_B_NOTES.md  PHASE_C_NOTES.md  PROJECT_STATUS.md  README.md  ROADMAP.md  THREAT_MODEL.md  at5_check.py  ci_log.txt  ci_log_utf8.txt  latest_runs.json  pyproject.toml  quickstart.py  scratch_gen.py  test.db  test.txt  trace_viewer.html  verify_at2.py  verify_at2_v2.py
%TEMP%/verify/: fixtura-1.0.2-py3-none-any.whl
.agents/: AGENTS.md
.github/workflows/: test.yml
.serena/: project.yml
_check/cli/: branch.py  eval.py  inspect.py  replay.py
_check/fixtura-1.0.6.dist-info/: METADATA  RECORD
_check/fixtura-1.0.6.dist-info/licenses/: LICENSE
_check/recorder/: __init__.py  recorder.py  sanitizer.py  trace_reader.py
_check/replay/: live_replay.py  step_inspector.py
_check/security/: __init__.py  permission_engine.py  rate_limiter.py
_check/tools/: base.py  html_viewer.py  openeval_adapter.py  sqlite_tool.py
cli/: eval.py  html_view.py  inspect.py  main.py  record.py  replay.py  view.py
docs/: COLLABORATION.md  PHASE_1_INSTRUCTIONS.md  TRACE_FORMAT_SPEC.md
fixtura.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
recorder/: recorder.py  trace_reader.py
replay/: __init__.py  passive_replay.py
security/: permission_engine.py
tests/: test_lineage.py  test_live_replay.py  test_openeval_adapter_e2e.py  test_quickstart.py  test_rate_limiter.py  test_recorder.py  test_replay.py  test_sanitizer.py  test_security.py  test_tools.py  test_trace_viewer.py
tools/: base_tool.py  filesystem_tool.py  http_tool.py  openeval_adapter.py  viewer.py
