[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fixtura"
version = "0.1.0"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.0",
    "zstandard>=0.20",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "types-requests>=2.0",
]

[project.scripts]
fixtura = "cli.main:main"

[tool.setuptools]
packages = ["recorder", "replay", "security", "tools", "cli"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "openeval.*"
ignore_missing_imports = true
