[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fixtura"
version = "1.0.3"
description = "Deterministic execution recording and replay for AI agents"
authors = [
    {name = "Yashrajsinh Rathod"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0,<3.0",
    "requests>=2.0,<3.0",
    "zstandard>=0.20,<1.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "types-requests>=2.0",
]

[project.scripts]
fixtura = "cli.main:main"

[tool.setuptools]
packages = ["recorder", "replay", "security", "tools", "cli"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "openeval.*"
ignore_missing_imports = true
