[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fixtura"
version = "1.0.6"
description = "Deterministic execution recording and replay for AI agents"
authors = [
    {name = "Yashrajsinh Rathod"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0,<3.0",
    "requests>=2.0,<3.0",
    "zstandard>=0.20,<1.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "types-requests>=2.0",
]
eval = ["openeval-core @ git+https://github.com/yash161004/OpenEval.git@4cb6cfe362c770a7674f5b0111ff54646883709b"]

[project.scripts]
fixtura = "cli.main:main"

[tool.setuptools]
packages = ["recorder", "replay", "security", "tools", "cli"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "openeval.*"
ignore_missing_imports = true
